--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -33,7 +33,8 @@ $header-height-padding: 20px;
 $header-padding-y: 5px;
 // Modal
 $modal-header-height: 100px;
-$modal-content-padding-form: 30px;
+$modal-content-padding-form-bottom: 30px;
+$modal-content-padding-form-top: 20px;
 // Prompt modal
 $modal-prompt-text-padding-y: 24px;
 $modal-prompt-body-max-height: 120px;
